bugfix(): CSS spacing bug fixed on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
+
   color: #272829;
 }
 
@@ -24,6 +23,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .hidden {
   visibility: hidden;
+}
+
+@media screen and (max-width: 768px) {
+  #about, #skills, #resume {
+     padding-right: 0.5rem;
+     padding-left: 0.5rem;
+  }
 }
 
 /*--------------------------------------------------------------
